--- a/main.ipynb
+++ b/main.ipynb
@@ -1,12 +1,10 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "%conda install pytorch torchvision -c pytorch"
+    "# Installation, Importing Dependencies"
    ]
   },
   {
@@ -15,25 +13,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install torch==1.10.1 torchvision==0.11.2 torchaudio==0.10.1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%conda install pytorch=1.9"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%conda install torchvision=0.10"
+    "%pip3 install torch torchvision torchaudio"
    ]
   },
   {
@@ -52,25 +32,7 @@
    "outputs": [],
    "source": [
     "%cd yolov5\n",
-    "%pip install -r \"requirements.txt\"\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%pip install Pillow==6.1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%pip install matplotlib==3.2.2"
+    "%pip install -r \"requirements.txt\""
    ]
   },
   {
@@ -92,6 +54,13 @@
     "from matplotlib import pyplot as plt    # for visualizing images\n",
     "import numpy as np    # array transformation\n",
     "import cv2    # help access webcam and render feeds"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Loading Model"
    ]
   },
   {
@@ -444,17 +413,25 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "img = 'https://upload.wikimedia.org/wikipedia/commons/thumb/e/e4/Cars_in_traffic_in_Auckland%2C_New_Zealand_-_copyright-free_photo_released_to_public_domain.jpg/800px-Cars_in_traffic_in_Auckland%2C_New_Zealand_-_copyright-free_photo_released_to_public_domain.jpg'"
+    "# Image Detection"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# img = 'https://upload.wikimedia.org/wikipedia/commons/thumb/e/e4/Cars_in_traffic_in_Auckland%2C_New_Zealand_-_copyright-free_photo_released_to_public_domain.jpg/800px-Cars_in_traffic_in_Auckland%2C_New_Zealand_-_copyright-free_photo_released_to_public_domain.jpg'\n",
+    "img = ['dataset/traffic.jpg']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +439,7 @@
      "output_type": "stream",
      "text": [
       "image 1/1: 533x800 2 persons, 28 cars, 5 trucks\n",
-      "Speed: 804.2ms pre-process, 105.5ms inference, 1.5ms NMS per image at shape (1, 3, 448, 640)\n"
+      "Speed: 10.7ms pre-process, 98.2ms inference, 8.4ms NMS per image at shape (1, 3, 448, 640)\n"
      ]
     }
    ],
@@ -473,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -497,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -506,7 +483,7 @@
        "(1, 533, 800, 3)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -517,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -574,13 +551,79 @@
        "         [ 50,  55,  59]]], dtype=uint8)]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "results.render()"
+    "results.render()\n",
+    "# This is just array representation of the image \n",
+    "# To actually render it, we have to pass it through to a rendering function"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Real Time Detection(실시간 객체 탐지)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cap = cv2.VideoCapture(0)   # accessing webcam (Video Capture Device 0)\n",
+    "while cap.isOpened():       # Capture Device가 열려있는지 확인\n",
+    "    ret, frame = cap.read() # Capture Device에서 읽어오기 (return value, frame)\n",
+    "\n",
+    "    cv2.imshow('YOLO', frame)\n",
+    "    if cv2.waitKey(10) & 0xEF == ord('q'):  # exit\n",
+    "       break\n",
+    "cap.release()               # realise webcam\n",
+    "cv2.destroyAllWindows\n",
+    "\n",
+    "# 여기까진 탐지X, 그냥 실시간 피드에 접근하는 거임(just accessing real-time feed)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m/Users/hssarah/Projects/webcam-realtime-detection/main.ipynb Cell 17'\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/hssarah/Projects/webcam-realtime-detection/main.ipynb#ch0000019?line=0'>1</a>\u001b[0m cap \u001b[39m=\u001b[39m cv2\u001b[39m.\u001b[39mVideoCapture(\u001b[39m0\u001b[39m)   \n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/hssarah/Projects/webcam-realtime-detection/main.ipynb#ch0000019?line=1'>2</a>\u001b[0m \u001b[39mwhile\u001b[39;00m cap\u001b[39m.\u001b[39misOpened():       \n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/hssarah/Projects/webcam-realtime-detection/main.ipynb#ch0000019?line=2'>3</a>\u001b[0m     ret, frame \u001b[39m=\u001b[39m cap\u001b[39m.\u001b[39;49mread() \n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/hssarah/Projects/webcam-realtime-detection/main.ipynb#ch0000019?line=4'>5</a>\u001b[0m     \u001b[39m# Make Detections - pass throught the frame from webcam to yolo model\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/hssarah/Projects/webcam-realtime-detection/main.ipynb#ch0000019?line=5'>6</a>\u001b[0m     results \u001b[39m=\u001b[39m model(frame)\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "cap = cv2.VideoCapture(0)   \n",
+    "while cap.isOpened():       \n",
+    "    ret, frame = cap.read() \n",
+    "\n",
+    "    # Make Detections - pass throught the frame from webcam to yolo model\n",
+    "    results = model(frame)\n",
+    "\n",
+    "    # cv2.imshow to show the results - wrap results.render() inside of numpy func to squeeze it\n",
+    "    cv2.imshow('YOLO', np.squeeze(results.render()))\n",
+    "    # results.render()는 그냥 이 이미지의 array representation이므로 \n",
+    "    # 실제로 이를 render 하려면 cv2.imshow같은 rendering function에 넣어줘야함. 그 과정에서 그 큰 배열에서 squeeze 하는 것.\n",
+    "\n",
+    "\n",
+    "\n",
+    "    if cv2.waitKey(10) & 0xEF == ord('q'):  \n",
+    "       break\n",
+    "cap.release() \n",
+    "cv2.destroyAllWindows\n"
    ]
   }
  ],
