--- a/main.ipynb
+++ b/main.ipynb
@@ -590,21 +590,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m/Users/hssarah/Projects/webcam-realtime-detection/main.ipynb Cell 17'\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/hssarah/Projects/webcam-realtime-detection/main.ipynb#ch0000019?line=0'>1</a>\u001b[0m cap \u001b[39m=\u001b[39m cv2\u001b[39m.\u001b[39mVideoCapture(\u001b[39m0\u001b[39m)   \n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/hssarah/Projects/webcam-realtime-detection/main.ipynb#ch0000019?line=1'>2</a>\u001b[0m \u001b[39mwhile\u001b[39;00m cap\u001b[39m.\u001b[39misOpened():       \n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/hssarah/Projects/webcam-realtime-detection/main.ipynb#ch0000019?line=2'>3</a>\u001b[0m     ret, frame \u001b[39m=\u001b[39m cap\u001b[39m.\u001b[39;49mread() \n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/hssarah/Projects/webcam-realtime-detection/main.ipynb#ch0000019?line=4'>5</a>\u001b[0m     \u001b[39m# Make Detections - pass throught the frame from webcam to yolo model\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/hssarah/Projects/webcam-realtime-detection/main.ipynb#ch0000019?line=5'>6</a>\u001b[0m     results \u001b[39m=\u001b[39m model(frame)\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "cap = cv2.VideoCapture(0)   \n",
     "while cap.isOpened():       \n",
@@ -621,9 +609,36 @@
     "\n",
     "\n",
     "    if cv2.waitKey(10) & 0xEF == ord('q'):  \n",
-    "       break\n",
+    "        break\n",
     "cap.release() \n",
     "cv2.destroyAllWindows\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 동영상에서 탐지하려면 여기 0 대신 VideoCapture에 이렇게 example.mp4 넣어주면 됨\n",
+    "cap = cv2.VideoCapture('example.mp4')   \n",
+    "while cap.isOpened():       \n",
+    "    ret, frame = cap.read() \n",
+    "\n",
+    "    # Make Detections - pass throught the frame from webcam to yolo model\n",
+    "    results = model(frame)\n",
+    "\n",
+    "    # cv2.imshow to show the results - wrap results.render() inside of numpy func to squeeze it\n",
+    "    cv2.imshow('YOLO', np.squeeze(results.render()))\n",
+    "    # results.render()는 그냥 이 이미지의 array representation이므로 \n",
+    "    # 실제로 이를 render 하려면 cv2.imshow같은 rendering function에 넣어줘야함. 그 과정에서 그 큰 배열에서 squeeze 하는 것.\n",
+    "\n",
+    "\n",
+    "\n",
+    "    if cv2.waitKey(10) & 0xEF == ord('q'):  \n",
+    "        break\n",
+    "cap.release() \n",
+    "cv2.destroyAllWindows"
    ]
   }
  ],
